# danmu-tts

./: .gitignore  CHANGELOG.md  Dockerfile  INSTALL.md  Makefile  PERFORMANCE.md  README.md  UV_SETUP.md  app.py  check_env.py  config.yaml  danmu-tts.service  demo_client.py  dev.sh  docker-compose.yml  flake.nix  process_manager.sh  pyproject.toml  requirements.txt  setup.sh  start_server.sh  uv.toml
danmu_tts/: __init__.py  config.py  main.py  manager.py
danmu_tts/api/: __init__.py  backends.py  health.py  tts.py  voices.py
danmu_tts/backends/: __init__.py  base.py  edge_tts.py
danmu_tts/models/: __init__.py  requests.py  responses.py
danmu_tts/utils/: audio.py  exceptions.py
docs/: README.md  SERVER_MANAGEMENT.md  UV_SETUP.md  configuration.md  installation.md  quick-start.md  rest-test.rest
docs/api/: rest-api.md  websocket-api.md
docs/backends/: edge-tts.md
docs/development/: architecture.md
src/: __init__.py  cache_manager.py  config.py  models.py  tts_manager.py  utils.py  websocket_manager.py
src/backends/: __init__.py  edge_tts.py  piper_tts.py  xtts.py
web/: index.html
